# AI_CHATBOT

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
backend/: .env.example  README.md  main.py
frontend/: angular.json  package-lock.json  package.json
frontend/.angular/cache/17.3.17/angular-webpack/0723b888616d5d7e6a9be9859f1ef0ba012cc358/: 1.pack  index.pack  index.pack.old
frontend/.angular/cache/17.3.17/angular-webpack/60dfb0940eb110b75e60b0c55b671c3890db8fff/: index.pack
frontend/.angular/cache/17.3.17/angular-webpack/77e5251e9216481055e4d63a044a6a28054a084a/: index.pack  index.pack.old
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts
